# app/Domain/Entity/Carro.php
@@ -8,7 +8,7 @@ use OpenApi\Annotations as OA;
  * @OA\Schema(
  *     schema="Carro",
  *     title="Carro",
- *     description="Modelo de carro"
+ *     description="Entidade dos Carros"
  * )
  */
 #[ORM\Entity]
@@ -26,6 +26,23 @@ class Carro
     #[ORM\Column(type: 'string')]
     private string $placa;
 
+    /**
+     * Modelo do Veículo,
+     * @var CarroModelo
+     * @OA\Property()
+     */
+    #[ORM\ManyToOne(targetEntity: CarroModelo::class)]
+    #[ORM\JoinColumn(name: 'modelo_id', referencedColumnName: 'id')]
+    private CarroModelo $modelo;
+
+    /**
+     * Cor do Veículo,
+     * @var string
+     * @OA\Property()
+     */
+    #[ORM\Column(type: 'string')]
+    private string $cor;
+
     public function getPlaca(): string
     {
         return $this->placa;
@@ -34,5 +51,25 @@ class Carro
     public function setPlaca(string $placa): void
     {
         $this->placa = $placa;
+    }
+
+    public function getCor(): string
+    {
+        return $this->cor;
+    }
+
+    public function setCor(string $cor): void
+    {
+        $this->cor = $cor;
+    }
+
+    public function getModelo(): CarroModelo
+    {
+        return $this->modelo;
+    }
+
+    public function setModelo(CarroModelo $modelo): void
+    {
+        $this->modelo = $modelo;
     }
 }
